--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
     #406aff 117.04%
   );
   box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
+  transition: 0.5s;
 }
 
 .btn:hover {
@@ -21,6 +22,7 @@
     #b936ee 100%,
     #ff56f6 117.04%
   );
+  transition: 0.5s;
 }
 
 .gradient,
@@ -51,7 +53,7 @@
     @apply font-primary font-semibold text-[26px] mb-6 leading-[46px];
   }
   .btn {
-    @apply rounded-full font-primary text-white font-medium;
+    @apply rounded-full font-primary text-white font-medium duration-500;
   }
   .btn-sm {
     @apply h-[48px] px-6 text-sm;
