--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+body::-moz-focus-inner {
+  color: #110726;
+}
+
+body::-webkit-scrollbar {
+  width: 0.8em;
+  background-color: #110726;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #4b2399;
+  box-shadow: 0px 0px 30px 30px #4b2399;
+}
+
 .btn {
   background: linear-gradient(
     92.23deg,
